# wb_project

./: README.rst  pyproject.toml
src/wb_project/: wb_project.py
tests/: fixtures.py  test_find_file.py  test_flips.py  test_repeated_number.py
wb_project/: __init__.py  find_file.py  find_minimum_permutations.py  find_repeated_number.py
