[tool.poetry]
name = "wb_project"
version = "0.0.1"
authors = ["Anna Garcia am.garcia.hervas@gmail.com"]
description = "WB project"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/suecannavlc/wb_project.git"
repository = "https://github.com/suecannavlc/wb_project.git"

[tool.poetry.dependencies]
python = "~3.10"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]

[project.urls]


